# extractive-qa-mlops

./: -files -s  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  idea_log_cn.md  idea_log_en.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/: app.py
artifacts/mlruns/best/: MODEL_CARD.md  metadata.json  tokenizer.json
artifacts/models/: experiment_summary.md
artifacts/models/best/: metadata.json
artifacts/models/best/reports/: error_cases.json
artifacts/models/experiments/20260212-214048_bert-base-uncased_lr3e-5_bs8_e1_l384_s128/: MODEL_CARD.md
artifacts/models/experiments/20260212-221318_bert-base-uncased_lr3e-5_bs8_e1_l384_s128/: metadata.json
artifacts/models/experiments/20260212-221830_bert-base-uncased_lr3e-5_bs8_e1_l384_s128/: MODEL_CARD.md  metadata.json
artifacts/models/experiments/20260212-222309_bert-base-uncased_lr2e-5_bs8_e1_l384_s128/: MODEL_CARD.md
configs/: api.yaml  data.yaml  index.yaml  mlflow.example.yaml  mlflow.yaml  serve.yaml  sweep.yaml  train.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: colab_train.ipynb
scripts/: sweep.py
src/: data.py  eval_cli.py  evaluate.py  mlflow.py  settings.py  train.py
src/extractive_qa_mlops/: api.py  best_model.py  data.py  eval_cli.py  evaluate.py  paths.py  serve.py  settings.py  text_utils.py  train.py
test_model_mlops/: train_bert.ipynb
tests/: test_api.py  test_best_model.py  test_data.py  test_data_module.py  test_evaluate_new.py  test_load.py  test_mlflow_wrapper.py  test_serve.py  test_text_utils.py
ui/: streamlit_app.py
(+4 files in other folders)
